--- a/_site.yml
+++ b/_site.yml
@@ -24,6 +24,8 @@ navbar:
   left:
     - text: "Course Syllabus"
       href: syllabus.html
+    - text: "Textbook"
+      href: https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook
     - text: "Miscellaneous"
       menu:
       - text: I Think I Might Need Some Help...
